parser and map fixes. Now not only rectangle...